[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/tower.gd" type="Script" id=1]
[ext_resource path="res://graphics/towers/basic/bottom.png" type="Texture" id=4]
[ext_resource path="res://graphics/white_circle.png" type="Texture" id=2]
[ext_resource path="res://graphics/towers/basic/machine.png" type="Texture" id=5]
[ext_resource path="res://graphics/towers.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0
radius = 96

[sub_resource type="Animation" id=2]

resource/name = "attack"
length = 0.2
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("attack_indicator:visibility/opacity")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.12, 0.16 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 0, 1, 0.3 ] }

[node name="tower" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, -0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98
linear_damp = 0.1
angular_damp = 1
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D", "__editor_plugin_states__":{ "2D":{ "ofs":Vector2( -97.3826, -137.168 ), "snap_grid":false, "snap_offset":Vector2( 0, 0 ), "snap_pixel":false, "snap_relative":false, "snap_rotation":false, "snap_rotation_offset":0, "snap_rotation_step":0.261799, "snap_show_grid":false, "snap_step":Vector2( 10, 10 ), "zoom":2.78951 }, "3D":{ "ambient_light_color":Color( 0.15, 0.15, 0.15, 1 ), "default_light":true, "default_srgb":false, "deflight_rot_x":0.942478, "deflight_rot_y":0.628319, "fov":45, "show_grid":true, "show_origin":true, "viewport_mode":1, "viewports":[ { "distance":4, "listener":true, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 }, { "distance":4, "listener":false, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 }, { "distance":4, "listener":false, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 }, { "distance":4, "listener":false, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 } ], "zfar":500, "znear":0.1 }, "Anim":{ "animation":"attack", "editing":false, "player":NodePath("animation_player"), "visible":true } }, "__editor_run_settings__":{ "custom_args":"-l $scene", "run_mode":0 } }
damage = 5

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="range_indicator" type="Sprite" parent="."]

visibility/visible = false
z/z = 1
texture = ExtResource( 2 )
modulate = Color( 1, 1, 1, 0.500859 )

[node name="attack_indicator" type="Sprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 0.5, 3 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -16, 0 )
flip_v = true
vframes = 3
frame = 2
modulate = Color( 0.50681, 0.806578, 0.906232, 1 )

[node name="sample_player_2d" type="SamplePlayer2D" parent="."]

params/volume_db = 0
params/pitch_scale = 1
params/attenuation/min_distance = 1
params/attenuation/max_distance = 2048
params/attenuation/distance_exp = 1
config/polyphony = 1
config/samples = null
config/pitch_random = 0

[node name="attack_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="animation_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0
root/root = NodePath("..")
anims/attack = SubResource( 2 )
playback/active = true
playback/speed = 1
blend_times = [  ]
autoplay = ""

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 4 )

[node name="rotator" type="Sprite" parent="."]

transform/pos = Vector2( -0.232925, 0.490585 )
texture = ExtResource( 5 )
offset = Vector2( -1.20103, 21.0186 )


